--- a/styles/home.css
+++ b/styles/home.css
@@ -58,6 +58,7 @@ div.user:active {
 }
 
 aside.user {
+    text-align: center;
     background-color: white;
     /* padding: 1rem; */
     display: flex;
@@ -69,7 +70,7 @@ aside.user {
     transition: transform 0.2s linear;
     transform: translateX(-1000px);
     z-index: 20;
-    height: 100%;
+    /* height: 100%; */
     margin-inline: 10px;
     border-radius: 10px;
 }
